--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -1,5 +1,8 @@
 # Frontend Environment Variables
 # Copy this file to .env and fill in your values
 
-# API Base URL (optional, defaults to /api which proxies to backend)
-# VITE_API_BASE_URL=http://localhost:5000/api
+# API Base URL (defaults to http://localhost:5001/api)
+VITE_API_BASE_URL=http://localhost:5001/api
+
+# WebSocket URL for real-time price updates (defaults to ws://localhost:5001/ws)
+VITE_WS_URL=ws://localhost:5001/ws
