--- a/backend/.env.example
+++ b/backend/.env.example
@@ -4,6 +4,53 @@
 # Server Configuration
 PORT=5000
 
+# JWT Authentication Configuration
+# Generate a secure random string for production (e.g., using: openssl rand -base64 32)
+# IMPORTANT: Keep this secret and never commit the actual value to version control
+JWT_SECRET=your_jwt_secret_key_here_change_in_production
+
 # Alpha Vantage API Configuration
 # Get your free API key from: https://www.alphavantage.co/support/#api-key
 ALPHA_VANTAGE_API_KEY=your_api_key_here
+
+# PostgreSQL Database Configuration
+# Option 1: Use a full connection string (recommended)
+DATABASE_URL=postgresql://postgres:postgres@localhost:5432/kuya_charts
+
+# Option 2: Use individual connection parameters (fallback if DATABASE_URL not set)
+DB_HOST=localhost
+DB_PORT=5432
+DB_NAME=kuya_charts
+DB_USER=postgres
+DB_PASSWORD=postgres
+
+# Database Setup Instructions:
+# 1. Install PostgreSQL: https://www.postgresql.org/download/
+# 2. Create database: createdb kuya_charts
+# 3. Or via psql: CREATE DATABASE kuya_charts;
+# 4. Update the connection settings above with your credentials
+# 5. Run: npm run seed (to populate the stocks table)
+
+# Redis Cache Configuration (Optional - for performance optimization)
+# If Redis is not available, the app will run without caching (graceful degradation)
+# Option 1: Use a full Redis URL (for production/cloud deployments)
+# REDIS_URL=redis://localhost:6379
+
+# Option 2: Use individual connection parameters (for local development)
+REDIS_HOST=localhost
+REDIS_PORT=6379
+
+# Cache Logging (Optional - set to 'true' to enable cache hit/miss logging)
+# CACHE_LOGGING=false
+
+# Redis Setup Instructions:
+# 1. Install Redis:
+#    - macOS: brew install redis
+#    - Ubuntu/Debian: sudo apt install redis-server
+#    - Windows: Use WSL or Redis for Windows
+# 2. Start Redis server:
+#    - macOS/Linux: redis-server
+#    - Or run as service: brew services start redis (macOS)
+# 3. Verify Redis is running: redis-cli ping (should return "PONG")
+# 4. The app will automatically connect to Redis if available
+# 5. If Redis is not running, the app continues without caching
