--- a/backend/package.json
+++ b/backend/package.json
@@ -7,7 +7,10 @@
   "scripts": {
     "dev": "tsx watch src/index.ts",
     "build": "tsc",
-    "start": "node dist/index.js"
+    "start": "node dist/index.js",
+    "migrate": "tsx src/scripts/runMigrations.ts",
+    "seed": "tsx src/scripts/seedStocks.ts",
+    "seed:metrics": "tsx src/scripts/seedMetrics.ts"
   },
   "keywords": [
     "stock-api",
@@ -17,16 +20,31 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.2",
+    "@types/bcrypt": "^6.0.0",
+    "@types/cookie-parser": "^1.4.10",
+    "@types/jsonwebtoken": "^9.0.10",
+    "@types/node-cron": "^3.0.11",
+    "@types/pg": "^8.16.0",
+    "axios": "^1.6.8",
+    "bcrypt": "^6.0.0",
+    "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
-    "axios": "^1.6.8"
+    "express": "^4.18.2",
+    "ioredis": "^5.9.2",
+    "jsonwebtoken": "^9.0.3",
+    "node-cron": "^4.2.1",
+    "pg": "^8.18.0",
+    "technicalindicators": "^3.1.0",
+    "ws": "^8.19.0"
   },
   "devDependencies": {
-    "@types/express": "^4.17.21",
     "@types/cors": "^2.8.17",
+    "@types/express": "^4.17.21",
+    "@types/ioredis": "^4.28.10",
     "@types/node": "^20.12.7",
-    "typescript": "^5.4.5",
-    "tsx": "^4.7.2"
+    "@types/ws": "^8.18.1",
+    "tsx": "^4.7.2",
+    "typescript": "^5.4.5"
   }
 }
