--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,9 +9,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "html2canvas": "^1.4.1",
     "lightweight-charts": "^4.1.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-router-dom": "^7.13.0",
     "technicalindicators": "^3.1.0"
   },
   "devDependencies": {
