--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -1,8 +1,73 @@
-# Frontend Environment Variables
+# ============================================
+# Kuya Charts Frontend Environment Variables
+# ============================================
 # Copy this file to .env and fill in your values
+# NEVER commit .env file to version control!
 
-# API Base URL (defaults to http://localhost:5001/api)
+# ============================================
+# API CONFIGURATION
+# ============================================
+# Backend API Base URL
+# Must include /api at the end
+# Local Development:
 VITE_API_BASE_URL=http://localhost:5001/api
 
-# WebSocket URL for real-time price updates (defaults to ws://localhost:5001/ws)
+# Railway Production Examples:
+# VITE_API_BASE_URL=https://your-backend.up.railway.app/api
+# VITE_API_BASE_URL=https://api.yourdomain.com/api
+
+# ============================================
+# WEBSOCKET CONFIGURATION
+# ============================================
+# WebSocket URL for real-time price updates
+# Local Development:
 VITE_WS_URL=ws://localhost:5001/ws
+
+# Railway Production Examples (use wss:// for secure WebSocket):
+# VITE_WS_URL=wss://your-backend.up.railway.app/ws
+# VITE_WS_URL=wss://api.yourdomain.com/ws
+
+# ============================================
+# ENVIRONMENT
+# ============================================
+# Environment mode
+VITE_ENV=development
+
+# For production:
+# VITE_ENV=production
+
+# ============================================
+# RAILWAY DEPLOYMENT NOTES
+# ============================================
+# 1. Vite environment variables MUST be prefixed with VITE_
+# 2. Variables are embedded at BUILD time, not runtime
+# 3. Add all variables to Railway dashboard under Variables tab
+# 4. Update API URLs to match your Railway backend service URL
+# 5. Use wss:// (not ws://) for production WebSocket connections
+# 6. Build command: npm run build
+# 7. Static files output to dist/ directory
+
+# ============================================
+# DEPLOYMENT OPTIONS
+# ============================================
+# Option 1: Deploy frontend on Railway
+# - Add service → Connect to GitHub → Choose frontend
+# - Set root directory to "frontend"
+# - Add environment variables above
+# - Railway will auto-detect and build
+#
+# Option 2: Deploy on Vercel/Netlify (Recommended for static sites)
+# - Better for React/Vite static sites
+# - Free tier available
+# - Automatic builds from GitHub
+# - Add environment variables in dashboard
+# - Set build command: npm run build
+# - Set output directory: dist
+
+# ============================================
+# ENVIRONMENT VARIABLE CHECKLIST
+# ============================================
+# Required for Production:
+# ✓ VITE_API_BASE_URL (backend API URL)
+# ✓ VITE_WS_URL (WebSocket URL with wss://)
+# ✓ VITE_ENV=production
