--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,56 +1,126 @@
-# Backend Environment Variables
+# ============================================
+# Kuya Charts Backend Environment Variables
+# ============================================
 # Copy this file to .env and fill in your values
+# NEVER commit .env file to version control!
 
-# Server Configuration
-PORT=5000
+# ============================================
+# SERVER CONFIGURATION
+# ============================================
+# Port for the backend server (Railway will assign this dynamically in production)
+PORT=5001
+NODE_ENV=development
 
-# JWT Authentication Configuration
-# Generate a secure random string for production (e.g., using: openssl rand -base64 32)
-# IMPORTANT: Keep this secret and never commit the actual value to version control
-JWT_SECRET=your_jwt_secret_key_here_change_in_production
-
-# Alpha Vantage API Configuration
-# Get your free API key from: https://www.alphavantage.co/support/#api-key
-ALPHA_VANTAGE_API_KEY=your_api_key_here
-
-# PostgreSQL Database Configuration
-# Option 1: Use a full connection string (recommended)
+# ============================================
+# DATABASE CONFIGURATION (PostgreSQL)
+# ============================================
+# Option 1 (RECOMMENDED): Use full connection string
+# Railway automatically provides DATABASE_URL when you add PostgreSQL plugin
+# Local format: postgresql://username:password@host:port/database
 DATABASE_URL=postgresql://postgres:postgres@localhost:5432/kuya_charts
 
-# Option 2: Use individual connection parameters (fallback if DATABASE_URL not set)
+# Option 2 (FALLBACK): Individual connection parameters
+# These are used if DATABASE_URL is not set
 DB_HOST=localhost
 DB_PORT=5432
 DB_NAME=kuya_charts
 DB_USER=postgres
 DB_PASSWORD=postgres
 
-# Database Setup Instructions:
+# Database Setup for Local Development:
 # 1. Install PostgreSQL: https://www.postgresql.org/download/
 # 2. Create database: createdb kuya_charts
-# 3. Or via psql: CREATE DATABASE kuya_charts;
-# 4. Update the connection settings above with your credentials
-# 5. Run: npm run seed (to populate the stocks table)
+#    OR via psql: CREATE DATABASE kuya_charts;
+# 3. Update connection settings above
+# 4. Run migrations: npm run migrate
+# 5. Seed data: npm run seed
 
-# Redis Cache Configuration (Optional - for performance optimization)
-# If Redis is not available, the app will run without caching (graceful degradation)
-# Option 1: Use a full Redis URL (for production/cloud deployments)
-# REDIS_URL=redis://localhost:6379
+# Railway PostgreSQL Setup:
+# 1. In Railway project, click "New" → "Database" → "Add PostgreSQL"
+# 2. Railway automatically creates DATABASE_URL variable
+# 3. No additional configuration needed!
 
-# Option 2: Use individual connection parameters (for local development)
+# ============================================
+# REDIS CACHE CONFIGURATION (Optional)
+# ============================================
+# Redis is optional - app gracefully degrades if unavailable
+# Option 1 (RECOMMENDED): Use full Redis URL
+# Railway automatically provides REDIS_URL when you add Redis plugin
+REDIS_URL=redis://localhost:6379
+
+# Option 2 (FALLBACK): Individual connection parameters
+# These are used if REDIS_URL is not set
 REDIS_HOST=localhost
 REDIS_PORT=6379
 
-# Cache Logging (Optional - set to 'true' to enable cache hit/miss logging)
-# CACHE_LOGGING=false
+# Enable cache logging (set to 'true' for debugging)
+CACHE_LOGGING=false
 
-# Redis Setup Instructions:
-# 1. Install Redis:
-#    - macOS: brew install redis
-#    - Ubuntu/Debian: sudo apt install redis-server
-#    - Windows: Use WSL or Redis for Windows
-# 2. Start Redis server:
-#    - macOS/Linux: redis-server
-#    - Or run as service: brew services start redis (macOS)
-# 3. Verify Redis is running: redis-cli ping (should return "PONG")
-# 4. The app will automatically connect to Redis if available
-# 5. If Redis is not running, the app continues without caching
+# Local Redis Setup:
+# - macOS: brew install redis && brew services start redis
+# - Ubuntu: sudo apt install redis-server && sudo systemctl start redis
+# - Verify: redis-cli ping (should return "PONG")
+
+# Railway Redis Setup:
+# 1. In Railway project, click "New" → "Database" → "Add Redis"
+# 2. Railway automatically creates REDIS_URL variable
+# 3. No additional configuration needed!
+
+# ============================================
+# AUTHENTICATION & SECURITY
+# ============================================
+# JWT Secret Key (CRITICAL: Change in production!)
+# Generate secure secret: openssl rand -base64 32
+# MUST be at least 256 bits (32 characters) for production
+JWT_SECRET=your_jwt_secret_key_here_change_in_production_minimum_32_chars
+
+# Railway Security Setup:
+# Generate secret: openssl rand -base64 32
+# Add to Railway: Variables → JWT_SECRET → (paste generated value)
+
+# ============================================
+# EXTERNAL API KEYS
+# ============================================
+# Alpha Vantage API Key (Required for stock data)
+# Get free API key: https://www.alphavantage.co/support/#api-key
+ALPHA_VANTAGE_API_KEY=your_alpha_vantage_api_key_here
+
+# Railway API Key Setup:
+# 1. Get API key from Alpha Vantage
+# 2. Add to Railway: Variables → ALPHA_VANTAGE_API_KEY → (paste key)
+
+# ============================================
+# CORS CONFIGURATION
+# ============================================
+# Frontend URL for CORS (adjust for your frontend deployment)
+# Local development
+FRONTEND_URL=http://localhost:5173
+
+# Railway Production Examples:
+# FRONTEND_URL=https://your-frontend.up.railway.app
+# FRONTEND_URL=https://yourdomain.com
+
+# ============================================
+# RAILWAY-SPECIFIC NOTES
+# ============================================
+# 1. PORT: Railway sets this automatically - use process.env.PORT || 5001
+# 2. DATABASE_URL: Added automatically with PostgreSQL plugin
+# 3. REDIS_URL: Added automatically with Redis plugin
+# 4. Custom variables: Add manually in Railway dashboard under Variables
+# 5. WebSockets: Supported by default on Railway
+# 6. Build command: npm run build (runs TypeScript compilation)
+# 7. Start command: npm start (runs compiled code from dist/)
+
+# ============================================
+# ENVIRONMENT VARIABLE CHECKLIST
+# ============================================
+# Required for Production:
+# ✓ DATABASE_URL (auto from Railway PostgreSQL)
+# ✓ JWT_SECRET (manually add to Railway)
+# ✓ ALPHA_VANTAGE_API_KEY (manually add to Railway)
+# ✓ FRONTEND_URL (manually add to Railway)
+# ✓ NODE_ENV=production (manually add to Railway)
+#
+# Optional but Recommended:
+# ✓ REDIS_URL (auto from Railway Redis)
+# ✓ PORT (auto from Railway)
