--- a/backend/package.json
+++ b/backend/package.json
@@ -8,6 +8,7 @@
     "dev": "tsx watch src/index.ts",
     "build": "tsc",
     "start": "node dist/index.js",
+    "postinstall": "npm run build",
     "migrate": "tsx src/scripts/runMigrations.ts",
     "seed": "tsx src/scripts/seedStocks.ts",
     "seed:metrics": "tsx src/scripts/seedMetrics.ts"
